k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: video-rental
  labels:
    name: video-rental
